Done Login with fb,gg,local. Member Page

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 HOST = localhost
 PORT = 3000
+ 
+clientFacebookID = "1355903685141807"
+clientFacebookSecret = "22819abeeab99c06ea13bd4663d06cd9"
+callbackFacebookURL = "http://localhost:3000/auth/facebook/callback"
+
+clientGoogleID = "109692959344-vf8b29j5mdvqto66khm2u0616u10na20.apps.googleusercontent.com"
+clientGoogleSecret = "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"
+callbackGoogleURL = "http://localhost:3000/auth/google/callback"
