--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "passport-google-oauth": "^2.0.0",
+    "passport-facebook": "^3.0.0",
+    "passport": "^0.6.0"
   }
 }
