Done reset password

--- a/.env
+++ b/.env
@@ -8,3 +8,17 @@ callbackFacebookURL = "http://localhost:3000/auth/facebook/callback"
 clientGoogleID = "109692959344-vf8b29j5mdvqto66khm2u0616u10na20.apps.googleusercontent.com"
 clientGoogleSecret = "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"
 callbackGoogleURL = "http://localhost:3000/auth/google/callback"
+
+APP_NAME=mailer
+APP_URL=http://localhost:3000
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=khanhduy8768@gmail.com
+MAIL_PASSWORD=jtntjwmssiljipok
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=khanhduy8768@gmail.com
+MAIL_FROM_NAME=${APP_NAME}
+
+
