--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
@@ -17,6 +18,7 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
+    "node-fetch": "^3.3.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "passport": "^0.6.0",
