--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.2",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.7",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
